; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Listener.c_SetMaxConnectionsPerIp.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Listener.c_SetMaxConnectionsPerIp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEFAULT_MAX_CONNECTIONS_PER_IP = common dso_local global i64 0, align 8
@MIN_MAX_CONNECTIONS_PER_IP = common dso_local global i32 0, align 4
@max_connections_per_ip = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetMaxConnectionsPerIp(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i64, i64* @DEFAULT_MAX_CONNECTIONS_PER_IP, align 8
  store i64 %6, i64* %2, align 8
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i64, i64* %2, align 8
  %9 = load i32, i32* @MIN_MAX_CONNECTIONS_PER_IP, align 4
  %10 = call i32 @MAX(i64 %8, i32 %9)
  store i32 %10, i32* @max_connections_per_ip, align 4
  ret void
}

declare dso_local i32 @MAX(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
